--- a/desafios/desfio010pessoal/index.html
+++ b/desafios/desfio010pessoal/index.html
@@ -25,7 +25,7 @@
             </aside>
             <aside>
                 <h1>assunto interessante</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, aliquam sunt itaque vel aspernatur provident cum id dignissimos? Neque mollitia quod quam dolorum, enim aliquid eos cupiditate omnis voluptatibus illum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero enim dolor dolores laborum unde, omnis, recusandae maiores et repellendus magnam ab accusamus aspernatur temporibus quo, quod odit fugit modi. Nisi.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim, aliquam sunt itaque vel aspernatur provident cum id dignissimos? Neque mollitia quod quam dolorum, enim aliquid eos cupiditate omnis voluptatibus illum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero enim dolor dolores laborum unde, omnis, recusandae maiores et repellendus magnam ab accusamus aspernatur temporibus quo, quod odit fugit modi. Nisi. rafael alves de carvalho</p>
             </aside>
             <aside>
                 <h1>assunto legal</h1>
