--- a/exercicios/ex022/fundo004.html
+++ b/exercicios/ex022/fundo004.html
@@ -6,12 +6,35 @@
     <title>document</title>
     <style>
         body {
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: cover;
             height: 98vh;
+            background: black url(imagens/wallpaper002.jpg) center center  no-repeat  fixed;
+            background-size: cover;
+        }
+        
+        header {
+            background-color: white;
+            margin: auto;
+            border: 2px solid black;
+            padding: 10px;
+            max-width: 400px;
+            border-radius: 10px;
+        }
+
+        header h1 {
+            text-align: center;
+        }
+
+        header a {
+            color: skyblue;
+            text-decoration: none;
+            margin-right: 5px;
+        }
+
+        header a:hover {
+            background-color: skyblue;
+            color: white;
+            border-radius: 2px;
+            padding: 2px;
         }
 
         main {
@@ -19,15 +42,37 @@
             margin: auto;
             border: 2px solid black;
             padding: 10px;
-            width: 400px;
+            max-width: 400px;
+            border-radius: 10px;
+        }
+
+        footer {
+           
+            background-color: white;
+            margin: 10px auto 0px auto;
+            border: 2px solid black;
+            padding: 10px;
+            max-width: 400px;
             border-radius: 10px;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>blblbbllb</h1>
+        <nav>
+            <a href="#">akkf</a>
+            <a href="#">akkf</a>
+            <a href="#">akkf</a>
+            <a href="#">akkf</a>
+        </nav>
+    </header>
     <main>
         <h1>fundo de conteudo</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, culpa. Amet, fugiat quos explicabo itaque incidunt consequuntur in placeat aliquam facilis et, quasi repudiandae, numquam ab maxime architecto blanditiis dolor? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat reiciendis alias rem veritatis excepturi itaque accusantium maxime quis, minima quaerat quasi ullam ab voluptate dolor soluta enim fuga incidunt magnam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, dicta! Tempora reiciendis sed delectus pariatur. Iusto id numquam aliquam distinctio iure rem animi! Mollitia cumque deserunt amet laboriosam dicta quae! esse texto é um lorem mas estou escrevendo isso pq estou entediado</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, culpa. Amet, fugiat quos explicabo itaque incidunt consequuntur in placeat aliquam facilis et, quasi repudiandae, numquam ab maxime architecto blanditiis dolor? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat reiciendis alias rem veritatis excepturi itaque accusantium maxime quis, minima quaerat quasi ullam ab voluptate dolor soluta enim fuga incidunt magnam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, dicta! Tempora reiciendis sed delectus pariatur. Iusto id numquam aliquam distinctio iure rem animi! Mollitia cumque deserunt amet laboriosam dicta quae! esse texto é um lorem mas estou escrevendo isso pq estou entediado</p><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, culpa. Amet, fugiat quos explicabo itaque incidunt consequuntur in placeat aliquam facilis et, quasi repudiandae, numquam ab maxime architecto blanditiis dolor? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat reiciendis alias rem veritatis excepturi itaque accusantium maxime quis, minima quaerat quasi ullam ab voluptate dolor soluta enim fuga incidunt magnam? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem, dicta! Tempora reiciendis sed delectus pariatur. Iusto id numquam aliquam distinctio iure rem animi! Mollitia cumque deserunt amet laboriosam dicta quae! esse texto é um lorem mas estou escrevendo isso pq estou entediado</p>
     </main>
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur itaque totam eius qui perferendis eligendi magna</p>
+    </footer>
 </body>
 </html>
