--- a/exercicios/ex023/index.html
+++ b/exercicios/ex023/index.html
@@ -12,10 +12,18 @@
         table {
            border-collapse: collapse; 
            width: 350px;
+           height: 250px;
         }
 
         td {
             border: 1px solid black;
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        .direita {
+            text-align: right;
+            vertical-align: bottom;
         }
 
 
@@ -34,12 +42,12 @@
         <tr>
             <td>a2</td>
             <td>b2</td>
-            <td>c2</td>
+            <td class="direita">c2</td>
             <td>d2</td>
         </tr>
         <tr>
             <td>a3</td>
-            <td>b3</td>
+            <td class="direita">b3</td>
             <td>c3</td>
             <td>d4</td>
         </tr>
