--- a/exercicios/ex025/form004.html
+++ b/exercicios/ex025/form004.html
@@ -6,6 +6,21 @@
     <title>formulario</title>
 </head>
 <body>
-    
+    <form action="cadastro.php" method="get">
+        <fieldset>
+            <legend>dados</legend>
+            <p>
+                <label for="iemail">emai:</label>
+                <input type="email" name="email" id="iemail" required>
+            </p>
+            <p>
+                <label for="itel">telefone:</label>
+                <input type="tel" name="tel" id="itel" required minlength="9" maxlength="9" placeholder="não coloque símbolos">
+            </p>
+        </fieldset>
+        <p>
+            <input type="submit" value="enviar">
+        </p>
+    </form>        
 </body>
 </html>
