--- a/exercicios/ex026/mq004/index.html
+++ b/exercicios/ex026/mq004/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>media query</title>
+    <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-queries.css">
 </head>
 <body>
-    
+    <main>
+        <h1>testando media queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="telefone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="tablet">
+        <img id="pc" src="imagens/icon-pc.png" alt="pc">
+        <img id="tv" src="imagens/icon-tv.png" alt="tv">
+        <img id="print" src="imagens/icon-print.png" alt="impressora">
+    </main>
 </body>
 </html>
